// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`genFeatureTypes > should generate correct TypeScript declaration 1`] = `
"// DO NOT EDIT THIS FILE. IT IS GENERATED BY THE BUCKET CLI AND WILL BE OVERWRITTEN.

export const generatedFeatures: string[];
export interface GeneratedFeatureTypes {
  "feat-1": {
    key: "feat-1",
    access: true,
    configType: undefined
  },
  "FEAT URE2": {
    key: "FEAT URE2",
    access: false,
    configType: string
  },
  feature3: {
    key: "feature3",
    access: true,
    configType: {
      aiModel: string,
      prompt: string
    }
  }
}"
`;

exports[`genFeatureTypes > should generate correct javascript file 1`] = `
"// DO NOT EDIT THIS FILE. IT IS GENERATED BY THE BUCKET CLI AND WILL BE OVERWRITTEN.

export const localFeatures = [
  {
    key: "feat-1",
    access: true,
    configType: undefined
  },
  {
    key: "FEAT URE2",
    access: false,
    configType: "string"
  },
  {
    key: "feature3",
    access: true,
    configType: {
      aiModel: "string",
      prompt: "string"
    },
    fallback: {
      isEnabled: true,
      config: {
        type: "number",
        aiModel: "gtp3.5-turbo",
        prompt: "Explain in conversational language"
      }
    }
  }
];"
`;
